<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_all_offers"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_all_offers" />

        <item
            android:id="@+id/nav_my_work_experience"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_my_work_experience" />

        <item
            android:id="@+id/nav_my_notifications"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_my_notifications" />

        <item
            android:id="@+id/nav_my_qualification"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_my_qualification" />

        <item
            android:id="@+id/nav_my_candidatures"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_my_candidatures" />
    </group>
</menu>