<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.offers.OfferViewer">

    <TextView
        android:id="@+id/userViewerDNIText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/dni"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/userViewerNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/userViewersurnameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/surname"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/userViewerEmailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/userViewerUserText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/user"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/userViewerPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/password"
        android:textAlignment="center"
        android:textSize="20sp" />

</LinearLayout>