<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.offers.OfferViewer">

    <TextView
        android:id="@+id/knowledgeViewerNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/knowledgeViewerPlaceText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/place"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/knowledgeViewerTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/knowledgeViewerInitDateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/init_date"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/knowledgeViewerFinishDateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/finish_date"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/knowledgeViewerLabelsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/labels"
        android:textAlignment="center"
        android:textSize="24sp" />

</LinearLayout>