<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.offers.OfferViewerFragment">

    <TextView
        android:id="@+id/offerViewerNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/offerViewerBusinessmanText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/businessman_name"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/offerrViewerSalaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/salary"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/offerrViewerUbicationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ubication"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/offerViewerLabelsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/labels"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/offerViewerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="100dp"
        android:text="Candidature" />

</LinearLayout>