<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".serverCommunication.ConnectionActivity">



    <EditText
        android:id="@+id/ip_direction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100px"
        android:layout_marginTop="400px"
        android:layout_marginEnd="100px"
        android:hint="@string/ip_direction" />

    <EditText
        android:id="@+id/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100px"
        android:layout_marginTop="100px"
        android:layout_marginRight="100px"
        android:hint="@string/port"
        android:inputType="number"/>

    <Button
        android:id="@+id/connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="350px"
        android:layout_marginTop="100px"
        android:text="@string/connect" />

</LinearLayout>